--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -1,6 +1,6 @@
-﻿@page "/"
-@using Sakuri
-@namespace Sakuri.Pages
+@page "/"
+@using Sokaneri
+@namespace Sokaneri.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
@@ -8,5 +8,7 @@
 }
 <head>
     <base href="~/" />
+    <link href="css/site.css" rel="stylesheet" />
+    <link href="Sokaneri.styles.css" rel="stylesheet" />
 </head>
 <component type="typeof(App)" render-mode="ServerPrerendered" />
