--- a/Pages/About.razor
+++ b/Pages/About.razor
@@ -1,18 +1,18 @@
 @page "/about"
 
-<h1>Sakuri</h1>
+<h1>Sokaneri</h1>
 <p>
 Get a detailed categorical view of your expenses with privacy and for free!
-With Sakuri you can track your expenses throughout a given amount of time, completely for free and without risking a loss of privacy. Sakuri is built to only have information on your expenses, and nothing else.
+With Sokaneri you can track your expenses throughout a given amount of time, completely for free and without risking a loss of privacy. Sokaneri is built to only have information on your expenses, and nothing else.
 </p>
 
 <div class=""><h1>Frequently Asked Questions</h1></div>
 
 <h4>What is the Account ID?</h4>
 <p>
-The Account ID is a unique identifier for every account on Sakuri, by using the Account ID you do not need to provide any email, phone number, or other personal information. It is highly suggested to store the Account ID in a secure area, since it's the only identifier Sakuri uses, and once it's gone it's lost it's lost for good.
+The Account ID is a unique identifier for every account on Sokaneri, by using the Account ID you do not need to provide any email, phone number, or other personal information. It is highly suggested to store the Account ID in a secure area, since it's the only identifier Sokaneri uses, and once it's gone it's lost it's lost for good.
 </p>
 <h4>What information is gathered?</h4>
 <p>
-Sakuri doesn't collect any information from a user, to the point where they could be traced. The only information that is stored in our database are the items, account numbers, and encrypted passwords. No information is and will be sold to other 3rd parties. 
+Sokaneri doesn't collect any information from a user, to the point where they could be traced. The only information that is stored in our database are the items, account numbers, and encrypted passwords. No information is and will be sold to other 3rd parties. 
 </p>
