--- a/_Imports.razor
+++ b/_Imports.razor
@@ -7,8 +7,8 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Http
 @using Microsoft.JSInterop
-@using Sakuri
-@using Sakuri.Shared
+@using Sokaneri
+@using Sokaneri.Shared
 @using Blazored  
 @using Blazored.Toast
 @using Blazored.Toast.Services
