--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,7 +1,7 @@
 <AuthorizeView>
     <Authorized>
         <div class="top-row pl-4 navbar navbar-dark">
-            <a class="navbar-brand" href="/home">Sakuri</a>
+            <a class="navbar-brand" href="/home">Sokaneri</a>
         </div>
         <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
             <ul class="nav flex-column">
