--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -11,7 +11,7 @@
         </Authorized>
         <NotAuthorized>
             <div class="top-row px-4 auth">
-                <a href="/" style="font-size: 25px">Sakuri</a>
+                <a href="/" style="font-size: 25px">Sokaneri</a>
             </div>
             <div class="sidebar @ViewOption.NavBarClass">
                 <NavMenu />
