--- a/Pages/AddProduct.razor
+++ b/Pages/AddProduct.razor
@@ -1,7 +1,7 @@
 @page "/AddProduct"
-@using Sakuri.Services
-@using Sakuri.Models
-@using Sakuri.Areas.Identity.Data
+@using Sokaneri.Services
+@using Sokaneri.Models
+@using Sokaneri.Areas.Identity.Data
 @using Microsoft.AspNetCore.Identity
 @inherits OwningComponentBase<AccountService>
 @inject NavigationManager NavigationManager
